dependencies version upgrade & record the IP region in the login log